      a non-polymorphic concrete inheritance setup 
      to use polymorphic loading on a per-query basis,
      since concrete setups are prone to many
      issues when used polymorphically in all cases.
      
- bugfixes, behavioral changes
- orm
    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.
      
    - Fixed bug introduced in 0.5rc4 involving eager 
      loading not functioning for properties which were
      added to a mapper post-compile using 
      add_property() or equivalent.

    - Duplicate items in a list-based collection will
      be maintained when issuing INSERTs to
      a "secondary" table in a many-to-many relation.
      Assuming the m2m table has a unique or primary key 
      constraint on it, this will raise the expected 
      constraint violation instead of silently
      dropping the duplicate entries. Note that the 
      old behavior remains for a one-to-many relation
      since collection entries in that case
      don't result in INSERT statements and SQLA doesn't
      manually police collections. [ticket:1232]
      
    - Query.add_column() can accept FromClause objects
      in the same manner as session.query() can.

    - Comparison of many-to-one relation to NULL is
      properly converted to IS NOT NULL based on not_().
     
    - Extra checks added to ensure explicit 
      primaryjoin/secondaryjoin are ClauseElement 
      instances, to prevent more confusing errors later 
      on.

    - Improved mapper() check for non-class classes.
      [ticket:1236]
    
    - comparator_factory argument is now documented
      and supported by all MapperProperty types,
      including column_property(), relation(), 
      backref(), and synonym() [ticket:5051].
      
    - Changed the name of PropertyLoader to
      RelationProperty, to be consistent
      with all the other names.  PropertyLoader is 
      still present as a synonym.